# L3S1Basic

./: BUILD.md  CMakeLists.txt  Makefile.linux  Makefile.macosx  Makefile.win  README.md  build_all.bat  cp_exefile.bat  cp_exefile.sh  l3s1basic.doxy  readme.txt
Eclipse/linux/l3s1basic/: .cproject  .project
Eclipse/win/l3s1basic/: .cproject  .project  pre_build.sh
VC++2010/: l3s1basic.vcxproj  l3s1basic.vcxproj.filters  wxwidgets.props
VC++2013/: l3s1basic.vcxproj  wxwidgets.props
VC++2015/: l3s1basic.vcxproj  l3s1basic.vcxproj.filters  wxwidgets.props
VisualC/: l3s1basic.props  l3s1basic.vcproj  l3s1basic.vcxproj  l3s1basic.vcxproj.filters  l3s1basic.vsprops
Xcode/l3s1basic/l3s1basic.xcodeproj/: project.pbxproj
docs/: COPYRIGHT.txt  ChangeLog.txt  Readme.txt
lang/ja/: l3s1basic.mo  l3s1basic.po
src/: basicspecs.h  bsstream.cpp  bsstream.h  bsstring.cpp  bsstring.h  chartypebox.cpp  chartypebox.h  colortag.cpp  colortag.h  common.h  config.cpp  config.h  configbox.cpp  configbox.h  decistr.cpp  decistr.h  dispsetbox.cpp  dispsetbox.h  errorinfo.cpp  errorinfo.h  fileinfo.cpp  fileinfo.h  fontminibox.cpp  fontminibox.h  intnamebox.cpp  intnamebox.h  l3float.cpp  l3float.h  l3s1basic.rc  l3specs.h  main.cpp  main.h  maptable.cpp  maptable.h  mymenu.h  mytextctrl.cpp  mytextctrl.h  parse.cpp  parse.h  parse_l3s1basic.cpp  (+16 more)
src/res/: Info.plist  l3s1basic.icns  l3s1basic.xpm
